--- a/UDC-VA-ChatBot/.env
+++ b/UDC-VA-ChatBot/.env
@@ -1,6 +1,6 @@
 MicrosoftAppType=MultiTenant
 MicrosoftAppId=461ce8a2-acc0-4706-93af-07f5b25ca924
-MicrosoftAppPassword=uMv8Q~PCjX1hnPi_jbAmGUW9Y2a6db9WBAqmIcww
+MicrosoftAppPassword=AAAAAA
 MicrosoftAppTenantId=
 
 ProjectName=UDC-VirtualAssistant
